--- a/java/res/values-sw/strings.xml
+++ b/java/res/values-sw/strings.xml
@@ -177,7 +177,7 @@
     <string name="setup_steps_title" msgid="6400373034871816182">"Inasanidi <xliff:g id="APPLICATION_NAME">%s</xliff:g>"</string>
     <string name="setup_step1_title" msgid="3147967630253462315">"Washa <xliff:g id="APPLICATION_NAME">%s</xliff:g>"</string>
     <string name="setup_step1_instruction" msgid="2578631936624637241">"Tafadhali angalia \"<xliff:g id="APPLICATION_NAME">%s</xliff:g>\" katika lugha yako na mipangilio ya kuingiza. Hii itaidhinisha ili iendeshwe kwenye kifaa chako."</string>
-    <string name="setup_step1_finished_instruction" msgid="10761482004957994">"<xliff:g id="APPLICATION_NAME">%s</xliff:g> tayari imewezeshwa katika Lugha na mipangilio yako ya kuingiza, kwa hivyo hatua hii imekamilika. Nenda kwenye hatua ifuatayo!"</string>
+    <string name="setup_step1_finished_instruction" msgid="10761482004957994">"<xliff:g id="APPLICATION_NAME">%s</xliff:g> tayari imewashwa katika mipangilio yako ya Lugha, Kibodi na Sauti, kwa hivyo hatua hii imekamilika. Nenda kwenye hatua inayofuata!"</string>
     <string name="setup_step1_action" msgid="4366513534999901728">"Washa katika Mipangilio"</string>
     <string name="setup_step2_title" msgid="6860725447906690594">"Badilisha kwenda <xliff:g id="APPLICATION_NAME">%s</xliff:g>"</string>
     <string name="setup_step2_instruction" msgid="9141481964870023336">"Kisha, chagua \"<xliff:g id="APPLICATION_NAME">%s</xliff:g>\" kama mbinu yako inayotumika ya kuingiza data ya maandishi."</string>
@@ -222,20 +222,20 @@
     <string name="user_dict_settings_add_menu_title" msgid="1254195365689387076">"Ongeza"</string>
     <string name="user_dict_settings_add_dialog_title" msgid="4096700390211748168">"Ongeza kwenye kamusi"</string>
     <string name="user_dict_settings_add_screen_title" msgid="5818914331629278758">"Fungu la maneno"</string>
-    <string name="user_dict_settings_add_dialog_more_options" msgid="5671682004887093112">"Chaguo zaidi"</string>
-    <string name="user_dict_settings_add_dialog_less_options" msgid="2716586567241724126">"Chaguo chache"</string>
+    <string name="user_dict_settings_add_dialog_more_options" msgid="5671682004887093112">"Hiari zingine"</string>
+    <string name="user_dict_settings_add_dialog_less_options" msgid="2716586567241724126">"Hiari chache"</string>
     <string name="user_dict_settings_add_dialog_confirm" msgid="4703129507388332950">"Sawa"</string>
     <string name="user_dict_settings_add_word_option_name" msgid="6665558053408962865">"Neno:"</string>
-    <string name="user_dict_settings_add_shortcut_option_name" msgid="3094731590655523777">"Njia mkato:"</string>
+    <string name="user_dict_settings_add_shortcut_option_name" msgid="3094731590655523777">"Njia ya mkato:"</string>
     <string name="user_dict_settings_add_locale_option_name" msgid="4738643440987277705">"Lugha:"</string>
     <string name="user_dict_settings_add_word_hint" msgid="4902434148985906707">"Chapa neno"</string>
-    <string name="user_dict_settings_add_shortcut_hint" msgid="2265453012555060178">"Njia mkato ya hiari"</string>
+    <string name="user_dict_settings_add_shortcut_hint" msgid="2265453012555060178">"Njia ya mkato ya hiari"</string>
     <string name="user_dict_settings_edit_dialog_title" msgid="3765774633869590352">"Badilisha neno"</string>
     <string name="user_dict_settings_context_menu_edit_title" msgid="6812255903472456302">"Hariri"</string>
     <string name="user_dict_settings_context_menu_delete_title" msgid="8142932447689461181">"Futa"</string>
-    <string name="user_dict_settings_empty_text" msgid="558499587532668203">"Huna maneno yoyote katika kamusi ya mtumiaji. Ongeza neno kwa kugusa kitufe cha Ongeza(+)."</string>
+    <string name="user_dict_settings_empty_text" msgid="558499587532668203">"Huna maneno yoyote katika kamusi ya mtumiaji. Ongeza neno kwa kugusa kitufe cha Ongeza (+)."</string>
     <string name="user_dict_settings_all_languages" msgid="8276126583216298886">"Ya lugha zote"</string>
-    <string name="user_dict_settings_more_languages" msgid="7131268499685180461">"Lugha zaidi..."</string>
+    <string name="user_dict_settings_more_languages" msgid="7131268499685180461">"Lugha zingine..."</string>
     <string name="user_dict_settings_delete" msgid="110413335187193859">"Futa"</string>
     <string name="user_dict_fast_scroll_alphabet" msgid="5431919401558285473">" ABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
 </resources>
